// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignMessage should render 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 eKUKXn"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="w-11 h-11 OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex relative items-center space-x-2"
            >
              <div
                class="sc-bdfBwQ bfBhNR"
                height="14"
                width="14"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <div
            class="flex-1"
          >
            <form
              class="space-y-5"
              data-testid="SignMessage"
            >
              <div>
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-5"
                  >
                    <div
                      class="flex justify-between items-end bg-theme-background"
                    >
                      <div
                        class="space-y-4"
                      >
                        <h1
                          class="mb-0 text-3xl"
                          data-testid="header__title"
                        >
                          Sign Message
                        </h1>
                        <div
                          class="text-theme-secondary-text"
                          data-testid="header__subtitle"
                        >
                          Provide a message below and sign with your mnemonic passphrase.
                        </div>
                      </div>
                    </div>
                    <fieldset
                      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
                    >
                      <label
                        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                        data-testid="FormLabel"
                        for="signatory-address"
                      >
                        Signatory
                      </label>
                      <div
                        class="fixed invisible w-auto whitespace-nowrap"
                      >
                        DLMm5AiKSXobaV6YFcUboPZVJ8mQ6MqjCv…
                      </div>
                      <div
                        class="Input__InputWrapperStyled-wu99qs-0 iRRxpY"
                        disabled=""
                      >
                        <div
                          class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 khDjUE"
                          data-testid="Avatar"
                        >
                          <div
                            class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                          >
                            <img
                              alt="DLMm5AiKSXobaV6YFcUboPZVJ8mQ6MqjCv"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"45\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"60\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/></svg>"
                              title="DLMm5AiKSXobaV6YFcUboPZVJ8mQ6MqjCv"
                            />
                          </div>
                        </div>
                        <div
                          class="flex relative flex-1 h-full"
                        >
                          <input
                            class="p-0 w-full font-semibold bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures text-theme-secondary-text"
                            data-testid="Input"
                            disabled=""
                            name="signatory-address"
                            value="DLMm5AiKSXobaV6YFcUboPZVJ8mQ6MqjCv"
                          />
                        </div>
                      </div>
                    </fieldset>
                    <fieldset
                      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
                    >
                      <label
                        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                        data-testid="FormLabel"
                        for="message"
                      >
                        Message
                      </label>
                      <div
                        class="fixed invisible w-auto whitespace-nowrap"
                      >
                        …
                      </div>
                      <div
                        class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
                      >
                        <div
                          class="flex relative flex-1 h-full"
                        >
                          <input
                            class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                            data-testid="SignMessage__message-input"
                            name="message"
                            value=""
                          />
                        </div>
                      </div>
                    </fieldset>
                    <fieldset
                      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
                    >
                      <label
                        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                        data-testid="FormLabel"
                        for="mnemonic"
                      >
                        Mnemonic
                      </label>
                      <div
                        class="fixed invisible w-auto whitespace-nowrap"
                      >
                        …
                      </div>
                      <div
                        class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
                      >
                        <div
                          class="flex relative flex-1 h-full"
                        >
                          <input
                            class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                            data-testid="SignMessage__mnemonic-input"
                            name="mnemonic"
                            type="password"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
                        >
                          <div
                            class=""
                          >
                            <button
                              class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none group"
                              data-testid="InputPassword__toggle"
                              type="button"
                            >
                              <div
                                class="absolute inset-0 -m-1 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                              />
                              <div
                                class="sc-bdfBwQ fPrsah"
                                height="1em"
                                width="1em"
                              >
                                <svg>
                                  eye.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </fieldset>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-8 space-x-3"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
                    data-testid="SignMessage__cancel-button"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ"
                    data-testid="SignMessage__submit-button"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Sign
                    </div>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SignMessage should render for ledger wallets 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 eKUKXn"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="w-11 h-11 OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex relative items-center space-x-2"
            >
              <div
                class="sc-bdfBwQ bfBhNR"
                height="14"
                width="14"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <div
            class="flex-1"
          >
            <form
              class="space-y-5"
              data-testid="SignMessage"
            >
              <div>
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-5"
                  >
                    <div
                      class="flex justify-between items-end bg-theme-background"
                    >
                      <div
                        class="space-y-4"
                      >
                        <h1
                          class="mb-0 text-3xl"
                          data-testid="header__title"
                        >
                          Sign Message
                        </h1>
                        <div
                          class="text-theme-secondary-text"
                          data-testid="header__subtitle"
                        >
                          Provide a message below and sign with your ledger.
                        </div>
                      </div>
                    </div>
                    <fieldset
                      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
                    >
                      <label
                        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                        data-testid="FormLabel"
                        for="signatory-address"
                      >
                        Signatory
                      </label>
                      <div
                        class="fixed invisible w-auto whitespace-nowrap"
                      >
                        DLMm5AiKSXobaV6YFcUboPZVJ8mQ6MqjCv…
                      </div>
                      <div
                        class="Input__InputWrapperStyled-wu99qs-0 iRRxpY"
                        disabled=""
                      >
                        <div
                          class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 khDjUE"
                          data-testid="Avatar"
                        >
                          <div
                            class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                          >
                            <img
                              alt="DLMm5AiKSXobaV6YFcUboPZVJ8mQ6MqjCv"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"45\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"60\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/></svg>"
                              title="DLMm5AiKSXobaV6YFcUboPZVJ8mQ6MqjCv"
                            />
                          </div>
                        </div>
                        <div
                          class="flex relative flex-1 h-full"
                        >
                          <input
                            class="p-0 w-full font-semibold bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures text-theme-secondary-text"
                            data-testid="Input"
                            disabled=""
                            name="signatory-address"
                            value="DLMm5AiKSXobaV6YFcUboPZVJ8mQ6MqjCv"
                          />
                        </div>
                      </div>
                    </fieldset>
                    <fieldset
                      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
                    >
                      <label
                        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                        data-testid="FormLabel"
                        for="message"
                      >
                        Message
                      </label>
                      <div
                        class="fixed invisible w-auto whitespace-nowrap"
                      >
                        …
                      </div>
                      <div
                        class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
                      >
                        <div
                          class="flex relative flex-1 h-full"
                        >
                          <input
                            class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                            data-testid="SignMessage__message-input"
                            name="message"
                            value=""
                          />
                        </div>
                      </div>
                    </fieldset>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-8 space-x-3"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
                    data-testid="SignMessage__cancel-button"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ"
                    data-testid="SignMessage__submit-button"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Sign
                    </div>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SignMessage should render signed step with wallet alias 1`] = `
<div>
  <section>
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-3xl"
          data-testid="header__title"
        >
          Message Successfully Signed
        </h1>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 kakuTR no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2 w-40 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Signatory
        </div>
        <div
          class="font-semibold"
        >
          <div
            class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
          >
            <span
              class="text-base font-semibold text-theme-text"
              data-testid="Address__alias"
            >
              <span
                class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                data-testid="TruncateEnd"
              >
                my-alias
              </span>
            </span>
            <span
              class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="Address__address"
            >
              DLMm5AiKSXobaV6YFcUboPZVJ8mQ6MqjCv
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB"
        data-testid="Avatar"
      >
        <div
          class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
        >
          <img
            alt="DLMm5AiKSXobaV6YFcUboPZVJ8mQ6MqjCv"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"45\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"60\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/></svg>"
            title="DLMm5AiKSXobaV6YFcUboPZVJ8mQ6MqjCv"
          />
        </div>
      </div>
    </div>
    <div
      class="text-lg break-all TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 cHOkoL no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2 w-40 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Message
        </div>
        <div
          class="font-semibold"
        >
          Hello World
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="json-signature"
      >
        Signature
      </label>
      <div
        class="fixed invisible w-auto whitespace-nowrap"
      >
        …
      </div>
      <div
        class="py-4 Input__InputWrapperStyled-wu99qs-0 bKjoCo"
      >
        <div
          class="flex relative flex-1 h-full"
        >
          <textarea
            class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
            data-testid="TextArea"
            name="signature"
            style="height: 4px;"
            wrap="hard"
          >
            {"message":"Hello World","signatory":"0360e26c8ab14e1bebf4d5f36ab16dcefc9e7b9d9e000ae2470397eccdf1280f6f","signature":"b9791983a2b2b529dad23e0798cf4df30b3880f4fda5f4587f1c3171f02d0c9f4491f8c6d3e76b5cd2e2fd11c9fdcc7958e77d1f19c1b57a55e9c99ed1e6a2b1"}
          </textarea>
        </div>
      </div>
    </fieldset>
  </section>
</div>
`;
